feat: toStringBuilder support the method getter